<resources>
    <string name="CODE_PUSH_APK_BUILD_TIME">1681400457211</string>
    <string name="Rs">₹</string>
    <string name="_2_player_battle">2 PLAYER BATTLE</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_survey">Abandon Survey and Forfeit Reward</string>
    <string name="aborting_quiz">Aborting Quiz</string>
    <string name="accept_text">Accept</string>
    <string name="account_offline">Connection lost</string>
    <string name="action_play_now">PLAY NOW</string>
    <string name="action_reply">REPLY</string>
    <string name="active_session">An active session already exists. Please call endUserSession before starting a new session</string>
    <string name="active_tables">ACTIVE\10GAMES</string>
    <string name="add">Add</string>
    <string name="add_file">Add file</string>
    <string name="add_header">Add header</string>
    <string name="add_parameter">Add parameter</string>
    <string name="alert">ALERT!</string>
    <string name="alert_description">Alert</string>
    <string name="all_apps">All Apps</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apk_integrity_install_fail">APK Corrupted</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>
    <string name="app_name">MPL Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_checking">Checking Security</string>
    <string name="apps_found_nplease_uninstall_these_apps_and_try_again">Suspicious apps found. Please uninstall these apps and try again</string>
    <string name="asset_download_failed">Game Downloading failed. Please go to game page and try again</string>
    <string name="asset_download_paused_check_internet_connection">Game download has paused, please check your internet connection &amp; try again.</string>
    <string name="asset_download_success">Game Downloaded successfully. Go Play and Win!</string>
    <string name="assets_mismatch">Game assets did not download properly. Download Again</string>
    <string name="assets_mismatch_download">Game assets did not download properly. Starting download…</string>
    <string name="assets_mismatch_play">Game assets did not download properly.</string>
    <string name="audio_permission_dialog_msg">Please provide audio permission to start voice chat with your opponent.</string>
    <string name="audio_permission_toast_msg">Please provide permission for audio chat</string>
    <string name="aunthentication_error">Authentication error. Please check the App credentials</string>
    <string name="authenticate_msg">Authenticating.. Please wait</string>
    <string name="background_checking">Checking Notifications</string>
    <string name="battery_optimization_desc">Go to \"Apps\" Menu in Phone Settings and tap on “MPL”. Then tap on the “Autostart” toggle to give permission.</string>
    <string name="battery_optimization_title">Go to \"Settings\" to Give Permission</string>
    <string name="battle_desc_1">Do not minimize or switch to a different app while waiting for your opponent or during gameplay.</string>
    <string name="battle_fee_will_not_be_deducted">Battle Fee will not be deducted</string>
    <string name="beckn_version">1.0rc1</string>
    <string name="beta_assets">false</string>
    <string name="binary_upload">Binary Upload</string>
    <string name="blocked_subtitle">Unable to access the app.\10 Please contact support for assistance.</string>
    <string name="blocked_title">Contact Support</string>
    <string name="blurry_face_detection_error">Face not clear. Please hold the phone steady while capturing.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="bt_add_card">Add card</string>
    <string name="bt_cancel">@android:string/cancel</string>
    <string name="bt_card_details">Card Details</string>
    <string name="bt_card_not_accepted">Card not accepted</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_cardholder_name_required">Cardholder name is required</string>
    <string name="bt_cid">CID</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_confirm_enrollment">Confirm Enrollment</string>
    <string name="bt_country_code_invalid">Country code is invalid</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cvn">CVN</string>
    <string name="bt_cvv">CVV</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_delete_confirmation_description">You will no longer be able to use this payment method in this app.</string>
    <string name="bt_delete_confirmation_title">Delete payment method?</string>
    <string name="bt_descriptor_amex">Amex</string>
    <string name="bt_descriptor_diners">Diners</string>
    <string name="bt_descriptor_discover">Discover</string>
    <string name="bt_descriptor_google_pay">Google Pay</string>
    <string name="bt_descriptor_hiper">Hiper</string>
    <string name="bt_descriptor_hipercard">Hipercard</string>
    <string name="bt_descriptor_jcb">JCB</string>
    <string name="bt_descriptor_maestro">Maestro</string>
    <string name="bt_descriptor_mastercard">MasterCard</string>
    <string name="bt_descriptor_pay_with_venmo">Venmo</string>
    <string name="bt_descriptor_paypal">PayPal</string>
    <string name="bt_descriptor_unionpay">UnionPay</string>
    <string name="bt_descriptor_unknown">Credit or Debit Card</string>
    <string name="bt_descriptor_visa">Visa</string>
    <string name="bt_done">Done</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_cardholder_name">Cardholder Name</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_mobile_number_invalid">Mobile number is invalid</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>
    <string name="bt_month">Month</string>
    <string name="bt_next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="capture_button_descriptor">Capture Image Button</string>
    <string name="card_select_text">Select Passport or ID/License</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="faceInstructionsBrightLight">Bright Light</string>
    <string name="faceInstructionsNoGlasses">No Glasses</string>
    <string name="faceInstructionsNoHat">No Hat</string>
    <string name="faceInstructionsProceed">Proceed to Take Selfie</string>
    <string name="faceInstructionsTitle">Selfie Tips</string>
    <string name="faceInstructionsTop1">Good lighting on your face</string>
    <string name="faceInstructionsTop2">Hold phone in front of you</string>
    <string name="flash_button_descriptor">Flash Image Button</string>
    <string name="go_to_all_games">Go to all games</string>
    <string name="help_button_descriptor">Help Image Button</string>
    <string name="help_text">Here are some tips:</string>
    <string name="instructions_border_image_descriptor">Instructions Border Image</string>
    <string name="instructions_center_image_descriptor">Instructions Center Image</string>
    <string name="instructions_clear_image_descriptor">Instructions Clear Image</string>
    <string name="instructions_skew_image_descriptor">Instructions Skew Image</string>
    <string name="license_button_descriptor">License Image Button</string>
    <string name="okay">OKAY</string>
    <string name="passport_button_descriptor">Passport Image Button</string>
    <string name="paynimo_imps_trigger_btn_default">@string/paynimo_trigger_default</string>
    <string name="paynimo_netbanking_bank_search_hint">SEARCH</string>
    <string name="paynimo_upi_note1_label">1. UPI is a payment system that enables you to make payment from your bank account via mobile.</string>
    <string name="paynimo_upi_note2_label">2. For a UPI transaction to complete, you will need to enter your Payment Address issued by your bank. Authentication request will be sent on your mobile.</string>
    <string name="paynimo_upi_note_label">Please note:</string>
    <string name="preview_image_descriptor">Preview Image</string>
    <string name="retry_again">Retry Again</string>
    <string name="retry_text">Retry</string>
    <string name="take_front_text">Take Front ID / License Picture</string>
    <string name="tap_focus_text">Touch Screen to Focus</string>
    <string name="tip_center_text">Center the ID</string>
    <string name="tip_clear_text">Take a clear picture, avoid glares and shadows</string>
    <string name="tip_flat_text">Take a flat photo, do not angle/skew</string>
    <string name="tip_visible_text">Leave a visible, dark border around ID</string>
    <string name="we_were_unab">We were unable to submit your score for this game! Please check your Wi-Fi or Mobile Data settings and try again.</string>
    <string name="webview_close_message">You will be redirected to MPL.</string>
    <string name="webview_close_title">Do you want to exit?</string>
</resources>