<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="22sp" android:textStyle="bold" android:gravity="center" android:id="@+id/helpTitleTextView" android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/help_text" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
    <View android:id="@+id/centerVerticalShim" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="0dp" android:layout_centerVertical="true"/>
    <View android:id="@+id/centerHorizontalShim" android:visibility="invisible" android:layout_width="0dp" android:layout_height="match_parent" android:layout_centerHorizontal="true"/>
    <RelativeLayout android:gravity="center" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_toLeftOf="@+id/centerHorizontalShim" android:layout_above="@+id/centerVerticalShim" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <ImageView android:id="@+id/instructionsSkewImage" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/instructions_noskew" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:contentDescription="@string/instructions_skew_image_descriptor"/>
        <TextView android:textAppearance="@style/TextAppearance.Material.Medium" android:gravity="center_horizontal" android:id="@+id/instructionsSkewTV" android:layout_width="match_parent" android:layout_height="70dp" android:text="@string/tip_flat_text" android:layout_below="@+id/instructionsSkewImage" android:layout_alignEnd="@+id/instructionsSkewImage"/>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_toRightOf="@+id/centerHorizontalShim" android:layout_above="@+id/centerVerticalShim" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <ImageView android:id="@+id/instructionsClearImage" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/instructions_clear" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerVertical="true" android:contentDescription="@string/instructions_clear_image_descriptor"/>
        <TextView android:textAppearance="@style/TextAppearance.Material.Medium" android:gravity="center_horizontal" android:id="@+id/instructionsClearTV" android:layout_width="match_parent" android:layout_height="70dp" android:text="@string/tip_clear_text" android:layout_below="@+id/instructionsClearImage"/>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_toLeftOf="@+id/centerHorizontalShim" android:layout_below="@+id/centerVerticalShim" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
        <ImageView android:id="@+id/instructionsBorderImage" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/instructions_border" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerVertical="true" android:contentDescription="@string/instructions_border_image_descriptor"/>
        <TextView android:textAppearance="@style/TextAppearance.Material.Medium" android:gravity="center_horizontal" android:id="@+id/instructionsBorderTV" android:layout_width="match_parent" android:layout_height="70dp" android:text="@string/tip_visible_text" android:layout_below="@+id/instructionsBorderImage"/>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_toRightOf="@+id/centerHorizontalShim" android:layout_below="@+id/centerVerticalShim" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <ImageView android:id="@+id/instructionsCenterImage" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/instructions_center" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:contentDescription="@string/instructions_center_image_descriptor" android:layout_alignParentStart="true"/>
        <TextView android:textAppearance="@style/TextAppearance.Material.Medium" android:gravity="center_horizontal" android:id="@+id/instructionsCenterTV" android:layout_width="match_parent" android:layout_height="70dp" android:text="@string/tip_center_text" android:layout_below="@+id/instructionsCenterImage"/>
    </RelativeLayout>
</RelativeLayout>
