<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/hv_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:gravity="center_horizontal" android:id="@+id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23dp" android:text="@string/faceInstructionsTitle" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/TextViewHeader"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/instrcutions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/title_text" android:layout_centerHorizontal="true">
        <TextView android:layout_gravity="center_horizontal" android:id="@+id/face_top1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="33.3dp" android:text="@string/faceInstructionsTop1" android:drawableLeft="@drawable/ic_matched_tick" android:drawablePadding="16dp" android:lineSpacingExtra="10sp" style="@style/TextViewContent"/>
        <TextView android:layout_gravity="center_horizontal" android:id="@+id/face_top2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.3dp" android:text="@string/faceInstructionsTop2" android:drawableLeft="@drawable/ic_matched_tick" android:drawablePadding="16dp" android:lineSpacingExtra="10sp" style="@style/TextViewContent"/>
    </LinearLayout>
    <ImageView android:id="@+id/selfie_image" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="78dp" android:layout_marginTop="20.3dp" android:layout_marginRight="70dp" android:layout_marginBottom="38.3dp" android:src="@drawable/ic_selfie_image" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_above="@+id/image_instructions" android:layout_below="@+id/instrcutions" android:layout_centerInParent="true"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/image_instructions" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="110dp" android:weightSum="3" android:layout_above="@+id/proceed_button" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:gravity="center" android:id="@+id/bright_light" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="15dp" android:text="@string/faceInstructionsBrightLight" android:maxLines="2" android:drawableTop="@drawable/ic_bright_light" android:drawablePadding="10.6dp" android:layout_weight="1" style="@style/TextViewContentMedium"/>
        <TextView android:gravity="center" android:id="@+id/no_glasses" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="15dp" android:text="@string/faceInstructionsNoGlasses" android:maxLines="2" android:drawableTop="@drawable/ic_no_glasses" android:drawablePadding="10.6dp" android:layout_weight="1" style="@style/TextViewContentMedium"/>
        <TextView android:gravity="center" android:id="@+id/no_hat" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/faceInstructionsNoHat" android:maxLines="2" android:drawableTop="@drawable/ic_no_hat" android:drawablePadding="10.6dp" android:layout_weight="1" style="@style/TextViewContentMedium"/>
    </LinearLayout>
    <TextView android:gravity="center" android:id="@+id/proceed_button" android:layout_width="match_parent" android:layout_height="51dp" android:layout_margin="16dp" android:text="@string/faceInstructionsProceed" android:layout_alignParentBottom="true" style="@style/ButtonRoundedRectangle"/>
</RelativeLayout>
