<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads" android:background="#ff000000" android:paddingLeft="0dp" android:paddingTop="0dp" android:paddingRight="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/previewImageView" android:padding="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/preview_image_descriptor"/>
    <Button android:textSize="18sp" android:id="@+id/acceptButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/accept_text" android:layout_alignParentBottom="true" android:onClick="acceptAction" android:layout_marginStart="30dp" android:layout_alignParentEnd="true"/>
    <Button android:textSize="18sp" android:id="@+id/retryButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/retry_text" android:layout_alignParentBottom="true" android:onClick="retryAction" android:layout_marginEnd="30dp" android:layout_alignParentStart="true"/>
</RelativeLayout>
