<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/camera_preview" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/topLayout" android:background="#ffffffff" android:padding="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0dp" android:layout_alignParentTop="true">
        <ImageButton android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/passportButton" android:background="@null" android:padding="5dp" android:clickable="true" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/passport_disabled" android:scaleType="fitCenter" android:onClick="toggleCardType" android:contentDescription="@string/passport_button_descriptor"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <TextView android:textSize="16sp" android:textColor="#ff000000" android:layout_gravity="center" android:id="@+id/selectionText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_select_text"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <ImageButton android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/licenseButton" android:background="@null" android:padding="5dp" android:clickable="true" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/license_selected" android:scaleType="fitCenter" android:onClick="toggleCardType" android:contentDescription="@string/license_button_descriptor"/>
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:id="@+id/borderLayout" android:layout_width="415.75dp" android:layout_height="590.5469dp" android:layout_centerInParent="true">
        <RelativeLayout android:id="@+id/passportBorder" android:background="@drawable/viewborder" android:visibility="invisible" android:layout_width="415.75dp" android:layout_height="590.5469dp" android:layout_centerInParent="true"/>
        <RelativeLayout android:id="@+id/licenseBorder" android:background="@drawable/viewborder" android:visibility="visible" android:layout_width="340.0234dp" android:layout_height="539.2031dp" android:layout_centerInParent="true"/>
        <RelativeLayout android:id="@+id/selfieBorder" android:background="@drawable/ovalborder" android:visibility="visible" android:layout_width="340.0234dp" android:layout_height="539.2031dp" android:layout_centerInParent="true"/>
        <TextView android:textSize="44sp" android:textStyle="bold" android:textColor="#70000000" android:gravity="center" android:id="@+id/overlayText" android:padding="5dp" android:layout_width="300dp" android:layout_height="wrap_content" android:text="@string/take_front_text" android:layout_centerInParent="true"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/tapFocusText" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/tap_focus_text" android:layout_alignParentBottom="true" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/bottomLayout" android:background="#ffffffff" android:padding="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0dp" android:layout_alignParentBottom="true">
        <ImageButton android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/helpButton" android:background="@null" android:padding="5dp" android:clickable="true" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/help" android:scaleType="fitCenter" android:onClick="openHelp" android:contentDescription="@string/help_button_descriptor"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/captureButton" android:background="@null" android:padding="1dp" android:clickable="true" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/camera" android:scaleType="fitCenter" android:onClick="captureImage" android:contentDescription="@string/capture_button_descriptor"/>
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <ImageButton android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/flashButton" android:background="@null" android:padding="1dp" android:clickable="true" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/noflash" android:scaleType="fitCenter" android:onClick="toggleFlash" android:contentDescription="@string/flash_button_descriptor"/>
    </LinearLayout>
</RelativeLayout>
