<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/error_root_dialog" android:background="@drawable/facebook_failed_dialog_border" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="112dp" android:layout_height="112dp" android:layout_marginTop="8dp" android:layout_marginBottom="24dp" android:src="@drawable/ic_error"/>
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/greyish_brown_three" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/connection_problem" android:lineSpacingExtra="4sp" android:fontFamily="sans-serif-condensed"/>
    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/greyish_brown_three" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@+id/dialog_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="26dp" android:text="@string/we_were_unab" android:lineSpacingExtra="4sp" android:fontFamily="sans-serif-condensed"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/dialog_ok" android:background="@drawable/facebook_share_button_bg" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginBottom="8dp" android:text="@string/retry_again" style="?android:attr/borderlessButtonStyle"/>
        <Button android:textSize="20sp" android:textColor="@color/warm_grey_seven" android:id="@+id/dialog_cancel" android:background="@drawable/button_bg_grey" android:layout_width="match_parent" android:layout_height="56dp" android:text="@string/go_to_all_games" style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>
