<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/error_root_dialog" android:background="@drawable/facebook_failed_dialog_border" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp">
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/greyish_brown_three" android:layout_gravity="center_horizontal" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="24dp" android:layout_marginRight="16dp" android:text="@string/webview_close_title" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <TextView android:textSize="15sp" android:textColor="@color/dialog_msg_black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/dialog_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="24dp" android:layout_marginRight="16dp" android:text="@string/webview_close_message" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="24dp" android:layout_marginTop="32dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
        <Button android:textSize="14sp" android:textColor="@color/warm_grey_seven" android:id="@+id/dialog_cancel" android:background="@drawable/button_bg_grey" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1" android:layout_marginEnd="8dp" style="?android:attr/borderlessButtonStyle"/>
        <Button android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/dialog_ok" android:background="@drawable/ok_cancel_btn_background" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/okay" android:layout_weight="1" android:layout_marginStart="8dp" style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>
